# template-bevy

./: Cargo.toml  README.md  package.json
.cargo/: config.toml
.github/workflows/: release.yml  sync.yml  test.yml
src/: main.rs  states.rs
src/components/: mod.rs
src/plugins/: game.rs  loading.rs  menu.rs  mod.rs
src/resources/: mod.rs
src/systems/: mod.rs
