[package]
name = "template-bevy"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Omni <team@omni.dev>"]
description = "Bevy game template"
license = "Apache-2.0"
repository = "https://github.com/omnidotdev/template-bevy"
homepage = "https://template-bevy.omni.dev"
keywords = ["game", "bevy"]
categories = ["games"]
readme = "README.md"

[[bin]]
name = "template-bevy"
path = "src/main.rs"

[dependencies]
bevy = "0.15"
bevy_asset_loader = { version = "0.22", features = ["2d"] }
rand = "0.8"
thiserror = "2"
tracing = "0.1"

[features]
dev = ["bevy/dynamic_linking"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
multiple_crate_versions = "allow"
cargo_common_metadata = "allow"
needless_pass_by_value = "allow"

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["precommit-hook", "run-cargo-fmt", "run-cargo-clippy", "run-cargo-test"] }
